--- a/MyWebCode.html
+++ b/MyWebCode.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-<title>Delyla</title>
+<title>DS</title>
 
 <body>
-  <h1>Delyla
+  <h1>DS
 
     <h2>Bio</h2>
-      <p>I am a high schooler that attends Renton High School. I find programming/computer science interesting and would like to obtain more information on it. In the future, I hope to have a career in computer science. </p><br><br>
+      <p>I am a high schooler. I find programming/computer science interesting and would like to obtain more information on it. In the future, I hope to have a career in computer science. </p><br><br>
       <h3>A Picture of Me:</h3>
       <p>This picture was taken <strong>years</strong> ago. I met a <em>Justin Bieber cardboard cut-out.</em></p>
       <img src="JBandM.png" width="300"<br><br>
