--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="JBandM.png" width="300"<br><br>
     <h2>Education and Experience</h2>
       <p></ul>
-        <li><strong>Attends Renton High School;</strong> Class of 2024</li><br>
+        <li><strong>Attends High School;</strong> Class of 2024</li><br>
         <li><strong>CIC Mentee 2021</strong>: Attending a 4-Week summer program offered by UW about
           the intersection of computing and social justice</li> <br>
           <li><strong>STEM Program Atendee 2018:</strong> Attended a week summer program offered at Renton High School about programming and science.</li><br>
