--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           Here is a link to my mini research on one of the listed animals:   <a href="Capybaras.html">Research on one of the animals</a> </li><br>
         <li>I enjoy crocheting. I make plushies and clothing. Below is a picture of my dog as a crochet plush.</li><br>
         <img src=DJ.png width="200"<br><br>
+<h5>What do I want to code for?</h5>
+        <li><a href="https://docs.google.com/presentation/d/1XzLMfyZSFXP4DvOL-IoqSbmINzetprzYNkYTi8JWpog/edit?usp=sharing">Link to What I want to code for</a> </li>
       <a href="#top">Back to Top</a>
 </body>
 </html>
